# walrus-audit-system

./: .env.example  .gitignore  Cargo.toml  DEMO_INSTRUCTIONS.md  DEMO_SCRIPTS.md  DEPLOYMENT_SUMMARY.md  DESIGN_DECISIONS.md  EMERGENCY_FIX_SUMMARY.md  LICENSE-MIT  README.md  SUBMISSION_CHECKLIST.md  demo-quick.sh  demo.sh
auditor-node/: Cargo.toml  config.example.toml  test_real_audit.sh
auditor-node/examples/: end_to_end_audit.rs  full_pqc_workflow.rs  run_single_audit.sh  submit_audit_test.rs  test_dilithium_format.rs  test_integrity_audit.rs  test_report_sign_verify.rs  test_seal_client.rs
auditor-node/src/: audit_report.rs  auditor.rs  auditor.rs.orig  auditor.rs.rej  config.rs  error.rs  integrity.rs  keystore.rs  lib.rs  main.rs  report.rs  retry.rs  seal_client.rs  storage_node_client.rs  sui_client.rs  sui_keystore.rs  types.rs
auditor-node/src/crypto/: merkle.rs  mod.rs  sliver.rs
contracts/: DEPLOYMENT_GUIDE.md  deploy-simple.sh  deploy.sh  deployed-contracts.json
contracts/access_policy/: Move.toml
contracts/access_policy/sources/: access_policy.move.old  report_access.move
contracts/audit_system/: Move.toml
contracts/audit_system/sources/: audit_core.move  audit_system.move.old  auditor_registry.move  incentives.move
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: SealDecryption.tsx
frontend/src/hooks/: useSuiContract.ts
pqc-signer/: Cargo.toml  test_sizes.rs
pqc-signer/examples/: analyze_signed_message.rs  test_detached_sign_verify.rs  test_detached_signature.rs  test_zero_key_verification.rs
pqc-signer/src/: dilithium.rs  error.rs  falcon.rs  lib.rs  traits.rs
pqc-signer/tests/: dilithium3_tests.rs
scripts/: setup.sh
seal-client/: .env.example  .eslintrc.json  README.md  create-test-policy.ts  encrypt-and-submit-report.ts  package-lock.json  package.json  query-function-signature.ts  read-blob-metadata.ts  register-auditor.ts  seal-api-server.ts  submit-audit-record.ts  submit-audit-report-simple.ts  submit-audit-report.ts  test-real-seal.ts  test-report.json  test-sui-integration.sh  upload-test-blob.ts  verify-audit-record.ts  verify-blob-hash.ts
seal-client/src/: access-proof-builder.ts  audit-report.ts  cli.ts  client.ts  index.ts  policy.ts  seal-config.ts  seal-ibe-client.ts  seal.ts  session-key-manager.ts  sui-contract-client.ts  types.ts  walrus-client.ts  walrus-sui-utils.ts
