[package]
name = "auditor-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 工作空間依賴 - 異步運行時
tokio.workspace = true
async-trait = "0.1"

# 工作空間依賴 - 序列化
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"

# 工作空間依賴 - 錯誤處理
anyhow.workspace = true
thiserror.workspace = true

# 工作空間依賴 - 日誌
tracing.workspace = true
tracing-subscriber.workspace = true

# 工作空間依賴 - HTTP 客戶端
reqwest.workspace = true

# 工作空間依賴 - Sui SDK
sui-sdk.workspace = true
sui-types.workspace = true

# 工作空間依賴 - 時間處理
chrono.workspace = true

# 工作空間依賴 - 密碼學
sha3.workspace = true
sha2 = "0.10"
rand.workspace = true
hex = "0.4"
fastcrypto = "0.1"

# Base64 編碼（用於 Seal API）
base64 = "0.21"

# 本地依賴 - PQC 簽名庫
pqc-signer = { path = "../pqc-signer" }

# 審計節點特定依賴
config = "0.14"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
