[package]
name = "pqc-signer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
sha3.workspace = true

# Post-quantum cryptography
pqcrypto-traits.workspace = true
pqcrypto-falcon.workspace = true
pqcrypto-dilithium.workspace = true

# Encoding
base64 = "0.21"
hex = "0.4"

# Logging
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "pqc_signer"
path = "src/lib.rs"
